ui_tests/assignment_9.box
fn bar() {}

fn foo() {
    bar.field
}